--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -3,8 +3,8 @@
 	right: 0;
 	height: 3px;
 	content: "";
-	background-color: $dark-gold;
-	color: $main;
+	background-color: $dark;
+	color: $bg-color;
 	transition: width 0.3s;
 }
 
@@ -22,8 +22,9 @@
 	background-attachment: fixed;
 }
 @mixin heroImages3($bgImg) {
-	background-image: $white, url($bgImg);
+	background-image: $black-gradient, url($bgImg);
 	background-size: cover;
 	background-position: center;
-	background-attachment: fixed;
+	background-attachment: scroll;
+	background-attachment:local;
 }
