--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -411,13 +411,9 @@ hr {
 }
 
 .offers {
-	max-width: 90vw;
-	min-height: 100vh;
-	margin: 2em 6em;
-	padding: 20px 0;
-	padding-top: 40px;
-	margin-bottom: 8em;
-	margin-top: 4em;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
 	&__title {
 		margin-top: 2em;
 		margin-bottom: 2em;
@@ -430,14 +426,15 @@ hr {
 
 	.cards {
 		display: flex;
-		justify-content: space-around;
+		align-content: center;
+		justify-content: space-evenly;
 		flex-wrap: wrap;
 
 		.card {
-			width: 28em;
-			margin-left: 0.5em;
-			margin-right: 0.5em;
-			margin-bottom: 40px;
+			max-width: 28em;
+			margin-left: 0em;
+			margin-right: 0em;
+			margin-bottom: 1em;
 			border-radius: 3px;
 			box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
 			transition: box-shadow 0.3s ease-in-out, top 0.3s ease-in-out;
@@ -458,7 +455,7 @@ hr {
 
 				img {
 					width: 100%;
-					height: 100%;
+					min-height: 100%;
 					object-fit: cover;
 					border: none;
 					z-index: 10000;
@@ -473,7 +470,7 @@ hr {
 				width: 100%;
 				height: 100%;
 				background-color: $black-shadow;
-				pointer-events: none; /* wyłączenie reakcji na zdarzenia myszy */
+				pointer-events: none;
 			}
 
 			&__content {
@@ -487,6 +484,7 @@ hr {
 				font-size: 2em;
 				text-transform: uppercase;
 				color: $extra;
+				text-shadow: 1px 1px 0 #000;
 			}
 
 			&__description {
@@ -496,300 +494,188 @@ hr {
 				color: $text-light;
 			}
 		}
-
-		// .card:hover {
-		// 	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
-		// 	background: #000;
-		// }
 	}
-}
-
-.swiper-container {
-	width: 100%;
-	min-height: 100vh;
-	transition-duration: 5s;
-	.swiper-slide {
-		display: flex;
-		justify-content: space-around;
-		align-items: center;
-		height: 100vh;
-
-		.projects {
-			margin: 1em;
-
-			&__title {
-				font-size: 48px;
-				margin-bottom: 50px;
-			}
-
-			&__grid {
-				justify-content: center;
-
-				.project {
-					margin-bottom: 8em;
-					margin-right: 1.5em;
-					max-width: 30%;
-
-					&__image {
-						margin-bottom: 3em;
-					}
-
-					&__title {
-						font-size: 3.6rem;
-						margin-bottom: 2rem;
-					}
-
-					&__description {
-						font-size: 2rem;
-						margin-bottom: 3em;
-					}
-
-					&__tags {
-						margin-bottom: 3em;
-
-						li {
-							display: flex;
-							justify-content: center;
-							align-items: center;
-							font-size: 1.2rem;
-							margin-right: 2rem;
-							padding: 2em;
-						}
-					}
-				}
-			}
+	.more__info {
+		align-self: center;
+		width: clamp(30em, 60vw, 50em);
+		text-align: center;
+		line-height: 1.4em;
+		margin: 2em;
+		font-style: italic;
+		padding: 1.2em;
+		letter-spacing: 0.08em;
+		box-shadow: 0px 0px 3px $extraLight;
+		border-radius: 3px;
+		font-weight: 300;
+		a {
+			color: $extra;
+			font-weight: 900;
 		}
 	}
 }
-.swiper-button-prev,
-.swiper-button-next {
-	position: absolute;
-	top: 50%;
-	width: 30px;
-	height: 30px;
-	margin-top: -15px;
-	z-index: 100;
-	padding: 3em 1em;
-	color: $extraLight;
-	cursor: pointer;
-}
-.swiper-button-prev {
-	left: 15px;
-}
-.swiper-button-next {
-	right: 15px;
-}
 
 .contact {
+	display: flex;
 	position: relative;
+	margin: 1em;
+	padding: 1em;
 	width: 100vw;
-	height: 100vh;
+	min-height: 100vh;
+	margin-bottom: 0;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
 	background-color: $bg-color-dark;
-	flex-direction: row;
-
 	&__title {
-		position: absolute;
-		left: 20%;
-		bottom: 0;
-		font-weight: 900;
-		text-transform: uppercase;
-		line-height: 1em;
-		text-align: center;
-		color: $text-light;
-		transform-origin: center left;
-		transform: translateY(-50%) rotate(-90deg);
-		font-size: 14rem;
-		text-transform: uppercase;
-		margin: 0;
+		margin: 1em;
+		font-size: 4.5rem;
 		background-image: url("/dist/img/contact2.webp");
 		background-size: cover;
-		background-position: right center;
 		background-clip: text;
 		color: transparent;
+		text-align: center;
+		line-height: 1em;
+		font-weight: 900;
+		text-transform: uppercase;
 	}
-	&__box {
+	&__box-info {
 		display: flex;
-		position: absolute;
-		min-width: 30vw;
-		flex-direction: row;
-		right: 0;
-		flex-wrap: wrap;
-		margin-top: 2.5em;
-		border-radius: 3px;
+		flex-direction: column;
+		justify-content: space-evenly;
+		align-items: center;
+		padding: 1em;
 		color: $text-light;
-
-		&-info {
-			position: absolute;
-			flex-direction: column;
-			min-height: 100%;
-			min-width: 400px;
-			width: 500px;
-			margin-bottom: 1em;
-			padding: 4em 4em 0em 4em;
-			border-top-left-radius: 3px;
-			border-bottom-left-radius: 3px;
-			font-size: 1em;
-			font-weight: 200;
+		a {
 			color: $text-light;
-			letter-spacing: 0.18em;
-			.title {
-				padding-bottom: 1em;
-				text-align: center;
-				font-size: 1.6em;
-				text-transform: uppercase;
-			}
-			img {
-				margin: 0.5em;
-				margin-right: 1em;
-				height: 2em;
-			}
-			.address {
-				align-items: start;
-			}
-			a {
-				text-decoration: none;
-				color: $text-light;
-			}
+		}
+		.contact__items {
+			display: flex;
+			align-items: center;
+			margin: 0.5em 1em;
+			width: 100%;
 
-			.contact__box-form {
+			img {
+				width: 60px;
+				padding: 1em;
+			}
+		}
+		.contact__box-form {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			width: 100%;
+
+			.form-box {
 				display: flex;
 				flex-direction: column;
-				width: 100%;
-				border: 1px solid $bg-color-dark;
-				padding: 0em;
-				.form-box {
-					display: flex;
-					flex-direction: column;
-					width: 100%;
-				}
-
+				margin: 1em 0;
+				border-radius: 3px;
 				label {
-					margin: 0.5em 0.3em;
-					width: 100%;
-					font-size: 1.2em;
+					padding: 0.5em 0;
 				}
 				input {
-					padding: 0.8em;
-					border: none;
-					border: 1px solid $bg-color-dark;
 					border-radius: 3px;
-					outline: transparent;
-					color: $text-dark;
-					background-clip: padding-box;
-
+					padding: 1em;
 					&::placeholder {
 						color: $text-dark;
 						opacity: 1;
 					}
 				}
-
-				.error {
-					input {
-						background-color: $extraLight;
-						border: 1px solid $extra;
-						font-weight: 500;
-					}
-					#textarea {
-						font-weight: 500;
-						background-color: $extraLight;
-						border: 1px solid $extra;
-					}
-					.error-text {
-						text-align: center;
-						color: $text-dark;
-						visibility: visible;
-						font-weight: 500;
-					}
+				textarea {
+					border-radius: 3px;
+					padding: 1em;
+				}
+			}
+			.error {
+				input {
+					background-color: $extraLight;
+					border: 1px solid $extra;
+					font-weight: 500;
+					color: #000;
+				}
+				#textarea {
+					font-weight: 500;
+					background-color: $extraLight;
+					border: 1px solid $extra;
 				}
 				.error-text {
-					margin: 0.2em 0.6em;
-					visibility: hidden;
-					font-size: 0.8em;
+					text-align: center;
+					color: $text-light;
+					visibility: visible;
+					font-weight: 500;
+				}
+			}
+			.error-text {
+				margin: 0.2em 0.6em;
+				visibility: hidden;
+				font-size: 0.8em;
+				color: $extraLight;
+			}
+			.rodo {
+				text-align: justify;
+				letter-spacing: 0.08em;
+				font-size: 0.8em;
+				margin: 0.5em;
+				a {
+					font-weight: 900;
 					color: $extra;
 				}
+			}
+			.send {
+				margin-top: 1em;
+				padding: 0.4em;
+				align-self: flex-end;
+				width: 100%;
+				font-family: "Lato", sans-serif;
+				font-weight: 500;
+				font-size: 1.7rem;
+				background: $pure-white;
+				border: 2px solid $dark;
+				border-radius: 3px;
+				color: $text-dark;
+				cursor: pointer;
 
-				textarea {
-					padding: 1.2em;
-					width: 100%;
-					height: 8em;
-					color: $text-dark;
-					border-radius: 3px;
-					outline: 1px solid transparent;
-
-					&::placeholder {
-						color: $text-light;
-					}
+				&::before {
+					background-color: $extra;
+					font-weight: 700;
+					width: 110%;
+					height: 110%;
 				}
-				.rodo {
-					padding: 0.5em 0;
-					padding-bottom: 0;
-					font-size: 0.85em;
-					text-align: justify;
-					letter-spacing: 0.1em;
-					a {
-						color: $extra;
-						font-weight: bold;
-					}
-				}
-				.send {
-					margin-top: 1em;
-					padding: 0.4em;
-					align-self: flex-end;
-					width: 100%;
-					font-family: "Lato", sans-serif;
-					font-weight: 500;
-					font-size: 1.7rem;
-					background: $pure-white;
-					border: 2px solid $dark;
-					border-radius: 3px;
-					color: $text-dark;
-					cursor: pointer;
-
-					&::before {
-						background-color: $extra;
-						font-weight: 700;
-						width: 110%;
-						height: 110%;
-					}
-				}
-				.send:hover {
-					color: $text-light;
-				}
+			}
+			.send:hover {
+				color: $text-light;
 			}
 		}
 	}
+
 	.form__popup {
 		display: none;
 		position: absolute;
-		padding: 2em;
-		width: clamp(30em, 40vw, 80vw);
-		height: clamp(16vh, 2vh, 40vh);
-		text-align: center;
-		background-color: $extraLight;
-		border-radius: 3px;
-		border: 1px solid $extra;
+		flex-direction: column;
 		left: 50%;
-		top: 100px;
-		transform: translate(-50%, 0%);
-		color: $text-dark;
+		top: 50%;
+		transform: translate(-50%, -50%);
+		width: 20em;
+		margin: 1em;
+		padding: 2em;
+		border-radius: 3px;
+		background-color: $extra;
 		z-index: 10000;
-		font-size: 1.2em;
-		box-shadow: 1px 1px 4px $popup-box-shadow-color;
+		text-align: center;
+		box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+
 		&-msg {
-			font-family: "Lato", sans-serif;
-			letter-spacing: 0.02em;
+			color: $text-light;
 			font-weight: 500;
 		}
 		&-close {
 			display: flex;
-			position: absolute;
 			bottom: 0;
 			left: 50%;
 			padding: 0.8em 2em;
 			justify-content: center;
-			width: 40%;
+			width: 100%;
 			margin: 1em 0;
-			margin-bottom: 2em;
 			transform: translateX(-50%);
 			font-size: 1.2rem;
 			font-weight: 900;
@@ -801,7 +687,6 @@ hr {
 			border-radius: 3px;
 			cursor: pointer;
 			box-shadow: 2px 3px 5px rgb(97, 78, 78);
-
 			&::before {
 				content: "";
 				position: absolute;
@@ -903,19 +788,30 @@ footer {
 		box-shadow: 0 0 5px $extraLight;
 		transition: width 4s;
 	}
-
-	.contact {
-		&__box {
-			position: absolute;
-			width: 100vw;
-			// margin: 1em;
-			&-info {
-				right: 0;
-				position: absolute;
-				min-width: 60vw;
-				flex-direction: column;
-				background-attachment: fixed;
+	.offers {
+		.cards {
+			.card {
+				margin: 1em;
 			}
+		}
+	}
+	.contact {
+		flex-direction: row;
+		min-height: 100vh;
+		margin-bottom: 0;
+		&__title {
+			margin: 0.5em;
+			margin-left: 0;
+			font-size: clamp(5em, 10vw, 9em);
+			transform: rotate(-90deg);
+			min-width: 40%;
+		}
+		&__box {
+			width: 60%;
+			margin-right: 2em;
+		}
+		.form__popup {
+			width: 30em;
 		}
 	}
 	footer {
@@ -954,92 +850,6 @@ footer {
 		display: none;
 	}
 
-	.contact {
-		position: relative;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-evenly;
-		width: 100vw;
-		font-size: 0.7em;
-		line-height: 1.6em;
-		color: $text-light;
-		padding: 1em auto;
-		&__title {
-			position: absolute;
-			left: 50%;
-			top: 0;
-			font-weight: 900;
-			text-transform: uppercase;
-			text-align: center;
-			color: $text-light;
-			transform-origin: top center;
-			transform: translate(-50%) rotate(0deg);
-			font-size: 4rem;
-			max-height: 3em;
-			text-transform: uppercase;
-			margin: 1em 0;
-			background-image: url("/dist/img/contact2.webp");
-			background-position: top;
-			background-clip: text;
-			color: transparent;
-		}
-		&__box {
-			width: 100%;
-			padding: 0.5em;
-			margin: 1em;
-			padding-top: 2em;
-			display: flex;
-			position: absolute;
-			justify-content: center;
-			justify-items: center;
-			align-items: center;
-			right: 5px;
-			bottom: 0;
-			color: $text-light;
-			&-info {
-				position: absolute;
-				justify-content: center;
-				color: $text-light;
-				margin: 2em;
-				padding-top: 2em;
-				padding: 0;
-				max-width: 60vw;
-				justify-content: center;
-				align-items: center;
-				bottom: 0;
-				left: 50%;
-				transform: translate(-50%);
-
-				.contact__items {
-					margin: 2em;
-					justify-items: center;
-					align-items: center;
-					font-weight: 300;
-					font-size: 1.3em;
-				}
-			}
-			&-form {
-				width: 100%;
-				padding: 2em;
-			}
-		}
-		.form__popup {
-			position: absolute;
-			max-width: 80vw;
-			margin: 0;
-			top: -300px;
-			left: 55%;
-			transform: translateX(-50%);
-		}
-
-		.form__popup-msg {
-			justify-content: center;
-			align-items: center;
-			color: $text-light;
-			padding: 1em;
-			max-width: fit-content;
-		}
-	}
 	footer {
 		font-size: 0.7em;
 		.footer {
@@ -1063,19 +873,14 @@ footer {
 }
 
 @media (max-width: 600px) {
-	.contact {
-		height: 110vh;
+	.offers {
+		.more__info {
+			margin-right: 2em;
+			max-width: 80vw;
+		}
 	}
 }
 .longAnima {
 	width: 70vw;
 	animation-delay: 50s;
-}
-.card {
-	opacity: 0;
-	transition: opacity 0.3s ease-in-out;
-}
-
-.card.visible {
-	opacity: 1;
 }
