--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -5,16 +5,18 @@ $nav-gradient-solid: linear-gradient(
 	rgb(201, 198, 193) 100%
 );
 $black-gradient: linear-gradient(0deg, #000000ed, #07164967);
-$black-gradient: linear-gradient(40deg, #000000, #07164967);
+$black-gradient: linear-gradient(40deg, #000000, #040c29b3);
 
 $pure-white: #fff;
 $dark: #0e1f2a;
 $extra: #b58c67;
+$extra: #ebae53;
 $extraLight: #ceb996;
 $bg-color: #fff;
 $text-dark: #0e1f2a;
 $text-light: #fff;
 $bg-color-dark: #292a32;
-$bg-color-dark: #1a1c27;
+$bg-color-dark: #23272f;
+$bg-color-dark: #23272f;
 $popup-box-shadow-color: rgba(181, 140, 103, 0.9);
 $black-shadow: rgba(14, 31, 42, 0.5);
