--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -11,12 +11,18 @@ $pure-white: #fff;
 $dark: #0e1f2a;
 $extra: #b58c67;
 $extra: #ebae53;
+$extra:#C08552;
+$extra:#E09F3E;
+
 $extraLight: #ceb996;
 $bg-color: #fff;
 $text-dark: #0e1f2a;
 $text-light: #fff;
 $bg-color-dark: #292a32;
+$extra-dark: #292a32;
 $bg-color-dark: #23272f;
 $bg-color-dark: #23272f;
+
 $popup-box-shadow-color: rgba(181, 140, 103, 0.9);
 $black-shadow: rgba(14, 31, 42, 0.5);
+
