mobile rwd bug fixed

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -9,20 +9,20 @@ $black-gradient: linear-gradient(40deg, #000000, #040c29b3);
 
 $pure-white: #fff;
 $dark: #0e1f2a;
-$extra: #b58c67;
-$extra: #ebae53;
-$extra:#C08552;
-$extra:#E09F3E;
+$extra:#4D98B6;
 
-$extraLight: #ceb996;
+
+$extraLight: #DEEEFD;
 $bg-color: #fff;
 $text-dark: #0e1f2a;
 $text-light: #fff;
 $bg-color-dark: #292a32;
+
 $extra-dark: #292a32;
 $bg-color-dark: #23272f;
 $bg-color-dark: #23272f;
+$bg-color-dark: #23272F;
 
-$popup-box-shadow-color: rgba(181, 140, 103, 0.9);
+$popup-box-shadow-color: #4d98b69a;
 $black-shadow: rgba(14, 31, 42, 0.5);
 
